K8S/quests-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: quests-depl
spec:
    replicas: 1
    selector: 
        matchLabels:
            app: questservice
    template:
        metadata:
            labels:
                app: questservice
        spec:
            containers:
              - name: questservice
                image: rodrigofp26/questservice:latest
---
apiVersion: v1
kind: Service
metadata:
    name: quests-clusterip-srv
spec:
    type: ClusterIP
    selector:
        app: questservice
    ports:
      - name: questservice
        protocol: TCP
        port: 80
        targetPort: 80
