K8S/skills-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: skillnpservice-srv
spec:
    type: NodePort
    selector:
        app: skillservice
    ports:
      - name: skillservice
        protocol: TCP
        port: 80
        targetPort: 80
