K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-srv
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-reges: 'true'
spec:
    rules:
      - host: lifegame.com
        http: 
            paths: 
              - path: /api/skills
                pathType: Prefix
                backend:
                    service:
                        name: skills-clusterip-srv
                        port: 
                            number: 80
              - path: /api/q/skills
                pathType: Prefix
                backend:
                    service:
                        name: quests-clusterip-srv
                        port:
                            number: 80
              - path: /api/quests
                pathType: Prefix
                backend:
                    service:
                        name: quests-clusterip-srv
                        port:
                            number: 80
